# rust-tutorial

./: .gitignore  README.MD
CRUD_Application/: Cargo.toml
CRUD_Application/src/: main.rs
Closures_Iter/: Cargo.toml
Closures_Iter/src/: main.rs
ConvertWalletAddress/: Cargo.toml
ConvertWalletAddress/src/: main.rs
String/: Cargo.toml
String/src/: main.rs
Tutorial0_HelloWord/: README.MD  hello_world
Tutorial10_GenericTypes/: Cargo.toml
Tutorial10_GenericTypes/src/: aggregator.rs  lifetimes.rs  main.rs
Tutorial10_Traits/: README.MD  main  main.rs
Tutorial1_UsingCargo/: README.MD
Tutorial2_GuessingGame/: Cargo.toml
Tutorial2_GuessingGame/src/: main.rs
Tutorial3_PrgConcepts/: Cargo.toml  README.MD
Tutorial3_PrgConcepts/src/: main.rs
Tutorial4_Ownership/: Cargo.toml  README.MD
Tutorial4_Ownership/src/: main.rs
Tutorial6_Enums/: Cargo.toml
Tutorial6_Enums/src/: main.rs
Tutorial7_Managing/: Cargo.toml
Tutorial7_Managing/src/: front_of_house.rs  lib.rs  main.rs
Tutorial8_CommonCollecttions/: Cargo.toml
Tutorial9_ErrorHandling/: Cargo.toml  hello.txt
bellman-example/: Cargo.toml
bellman-example/src/: main.rs  problem.rs
enum_match/: main  main.rs
five_traits_must_impl/: Cargo.toml
hash_map_01/: Cargo.toml
longest_common_prefix/: main  main.rs
map_fn/: Cargo.toml
near_vrf/: Cargo.toml
rust_ownership/: main  main.rs
serde_json/: Cargo.toml
test_fn/: Cargo.toml
test_fn/src/: main.rs
transform_enum/: Cargo.toml
transform_enum/src/: lib.rs
wss_sample/: Cargo.toml
zkp_sample/: Cargo.toml  build.sh
zkp_sample/res/: hello.wasm
zkp_sample/src/: lib.rs
(+26 files in other folders)
