[package]
name = "bellman-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bit-vec = "0.4.4"
pairing = "0.14"
bellman = "0.13.1"
rand = "0.8"
ff = "0.12.0"
bls12_381 = "0.7.0"
sha2 = "0.10.2"