[package]
name = "transform_enum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive-getters = "0.2.0"
derive_more = "0.99.11"
derive-new = "0.5.8"
strum = "0.20.0"
strum_macros = "0.20.1"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"